--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "chess-by-z",
   "version": "1.0.0",
-  "description": "Open-source client-side chess website",
+  "description": "Open-source chess website with Cloudflare-hosted puzzle database",
   "scripts": {
     "dev": "python chess-website-uml/public/serve.py",
     "test": "node --test tests/**/*.test.js",
     "lint": "eslint ."
   },
-  "keywords": ["chess", "client-side"],
+  "keywords": [
+    "chess"
+  ],
   "author": "",
   "license": "MIT",
   "type": "module",
